got alerts lined up correctly, and images aligned

--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 #peopleDiv {
-    display: inline-block;
+    display: inline-flex;
 }
